<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="209dp"
        android:layout_height="184dp"
        android:layout_marginTop="@dimen/gif_top"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="@dimen/three"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/button_general"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backtomenu" />

    <Button
        android:id="@+id/backtomenu"
        android:layout_width="@dimen/three"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/button_general"
        android:text="@string/backtomenu"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/logout"
        android:layout_width="@dimen/three"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/button_general"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="310dp"
        android:layout_height="66dp"
        android:layout_marginStart="@dimen/zero"
        android:layout_marginTop="@dimen/logo_top"
        android:layout_marginEnd="@dimen/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/context" />

</androidx.constraintlayout.widget.ConstraintLayout>